tests/errors/lex_escape_char.java
public class lex_escape_char {
public static	char b = '\';
}
